--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,27 +5,35 @@ services:
     user: root
     privileged: true
     container_name: dind
-    expose:
-      - 2376
     networks:
-      - jenkins_dind
+      jenkins_dind:
+        aliases:
+          - docker
+    volumes:
+      - ./docker-certs-ca:/certs/ca
+      - ./docker-certs-client:/certs/client
+      - ./jenkins-data:/var/jenkins_home
     environment:
-      DOCKER_TLS_CERTDIR: ""
+      DOCKER_TLS_CERTDIR: "/certs"
 
   jenkins:
     image: jenkins/jenkins:lts
     user: root
     container_name: jenkins
+    restart: unless-stopped
     depends_on:
       - dind
     ports:
       - 8080:8080
       - 50000:50000
     volumes:
-      - ./jenkins:/var/jenkins_home
+      - ./docker-certs-client:/certs/client:ro
+      - ./jenkins-data:/var/jenkins_home
       - /usr/bin/docker:/usr/bin/docker
     environment:
-      DOCKER_HOST: "tcp://dind:2376"
+      DOCKER_HOST: "tcp://docker:2376"
+      DOCKER_CERT_PATH: "/certs/client"
+      DOCKER_TLS_VERIFY: "1"
     networks:
       - jenkins_dind
 
